[gd_scene load_steps=9 format=3 uid="uid://ct8fd4qewqsb2"]

[ext_resource type="Texture2D" uid="uid://csr37dsoa3vje" path="res://Assets/Opdelt porte/taro_port_h.png" id="1_6iywj"]
[ext_resource type="Script" path="res://taro_port_2.gd" id="1_noj5p"]
[ext_resource type="Texture2D" uid="uid://3v5dhowmlvef" path="res://Assets/Opdelt porte/taro_port_v.png" id="2_3m375"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5br4"]
size = Vector2(65, 20)

[sub_resource type="Animation" id="Animation_idffn"]
resource_name = "taro_port_open_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_jphnt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_qyneg"]
resource_name = "taro_port_close_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("taro_v_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("taro_h_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ajk7f"]
_data = {
"RESET": SubResource("Animation_jphnt"),
"taro_port_close_2": SubResource("Animation_qyneg"),
"taro_port_open_2": SubResource("Animation_idffn")
}

[node name="taro_port_2" type="StaticBody2D"]
script = ExtResource("1_noj5p")

[node name="taro_h_2" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("1_6iywj")

[node name="taro_v_2" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("2_3m375")

[node name="taro_port_collision_2" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_q5br4")

[node name="ap_taro_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ajk7f")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
